--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,11 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/TrafficController.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.mysql-connector-java-5.1.39-bin.jar=C:\\Users\\drago\\OneDrive\\Documents\\Work\\Omar NetLogo\\mysql-connector-java-5.1.39\\mysql-connector-java-5.1.39-bin.jar
 file.reference.NetLogo.jar=C:\\Program Files\\NetLogo 5.3\\app\\NetLogo.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.NetLogo.jar}
+    ${file.reference.NetLogo.jar}:\
+    ${file.reference.mysql-connector-java-5.1.39-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
